2008-04-07  Julien Moutte  <julien@fluendo.com>

	* gst/rtp/gstrtph264pay.c: (gst_rtp_h264_pay_setcaps): Fix build
	because of a bad argument number.

2008-04-06  Tim-Philipp Müller  <tim at centricular dot net>

	* tests/icles/.cvsignore:
	* tests/icles/Makefile.am:
	* tests/icles/gdkpixbufsink-test.c:
	  Interactive test app for gdkpixbufsink.

2008-04-06  Sebastian Dröge  <slomo@circular-chaos.org>

        Patch by: Damien Lespiau <damien dot lespiau at gmail dot com>

        * configure.ac:
        Actually build dlls when cross-compiling with mingw32.
        Fixes bug #526247.

2008-04-05  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/hal/hal.c: (gst_hal_get_alsa_element):
	  Don't munge device string to 'default:x' for capture devices.
	  Fixes #525833.

2008-04-04  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/wavpack/gstwavpackparse.c:
	(gst_wavpack_parse_index_entry_free):
	Always use GSlice as we actually depend on GLib 2.12 already.

2008-04-04  Tim-Philipp Müller  <tim at centricular dot net>

	* configure.ac:
	  Require core/base 0.10.18 for ARGB caps parsing fixes in libgstvideo.
	  Also bump the GLib requirement to the current de-facto requirement
	  (ie. 2.12).

2008-04-04  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtp/gstrtph264pay.c: (encode_base64),
	(gst_rtp_h264_pay_setcaps), (gst_rtp_h264_pay_handle_buffer):
	* gst/rtp/gstrtph264pay.h:
	Parse codec_data for future AVC compatibility.
	Fail when we encounter AVC data for now.

2008-04-04  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/spectrum/gstspectrum.c: (gst_spectrum_class_init),
	  (gst_spectrum_init), (gst_spectrum_set_property),
	  (gst_spectrum_get_property), (gst_spectrum_message_new):
	  Rename property enums and default defines for the properties to match
	  the property names and rephrase property descriptions to make them a
	  bit clearer (hopefully). See #518188.

2008-04-03  Tim-Philipp Müller  <tim at centricular dot net>
