@@ -574,13 +574,7 @@ gst_oss_sink_delay (GstAudioSink * asink)
 static void
 gst_oss_sink_reset (GstAudioSink * asink)
 {
-#if 0
-  GstOssSink *oss;
-  gint ret;
-
-  oss = GST_OSSSINK (asink);
-
-  /* deadlocks on my machine... */
-  ret = ioctl (oss->fd, SNDCTL_DSP_RESET, 0);
-#endif
+  /* There's nothing we can do here really: OSS can't handle access to the
+   * same device/fd from multiple threads and might deadlock or blow up in
+   * other ways if we try an ioctl SNDCTL_DSP_RESET or similar */
 }
